--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
   width: 90%;
 }
 
-.form input {
+.email__input {
   width: 100%;
   padding: 1rem 2rem;
   margin: 2rem 0 0;
@@ -61,9 +61,14 @@ body {
   border: 1px solid var(--gray);
 }
 
+.error__border {
+  border: 1px solid var(--lgt-red);
+}
+
 .error__message {
   display: none;
   color: var(--lgt-red);
+  text-align: center;
   font-style: italic;
   font-size: 0.6rem;
   font-weight: 600;
@@ -120,4 +125,46 @@ body {
 
 .attribution {
   opacity: 0.5;
+}
+
+@media (min-width: 1000px) {
+  .container {
+    margin: 5vh 0 0;
+  }
+
+  .launch__text {
+    font-size: 2rem;
+  }
+
+  .subscribe__text {
+    font-size: 1rem;
+  }
+
+  .form {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem 0;
+    width: 100%;
+  }
+
+  .email__input {
+    width: 75%;
+    margin: 0 1rem 0 0;
+  }
+
+  .error__message {
+    position: absolute;
+    bottom: -70%;
+    left: 5%;
+  }
+
+  .form button {
+    width: 30%;
+    margin: 0;
+  }
+
+  .socials {
+    padding: 0 0 1rem;
+  }
 }
